se agregó navbar

--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,18 @@ body {
   @apply bg-zinc-900 text-zinc-50 h-[200vh]
 }
 
+/* utilities */
+
+.material-symbols-rounded {
+  @apply w-[1em] h-[1em] overflow-hidden;
+  font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
+}
+
+
 
 /* Components */
 
-  /* Menu btn */
+/* Menu btn */
 .menu-btn {
   @apply w-10 h-10 grid place-items-center bg-zinc-50/10 rounded-xl ring-inset ring-1 ring-zinc-50/[0.02] backdrop-blur-2xl hover:bg-zinc-50/15 transition-[transform,background-color] active:scale-95
 }
@@ -42,3 +50,13 @@ body {
 .navbar .active-box {
   @apply absolute bg-zinc-50 rounded-lg -z-10 transition-[top,left] duration-500
   }
+
+/* button */
+
+.btn {
+  @apply max-w-max h-9 flex items-center gap-2 px-4 rounded-xl font-medium text-sm ring-1 ring-zinc-50/5 ring-inset transition-[background-color]
+}
+
+.btn-secondary {
+  @apply bg-zinc-50 text-zinc-900 active:bg-zinc-50/80
+}
