--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 
-/* Root*/
+/* ---------> Root <--------- */
 html {
   scroll-behavior: smooth;
 }
@@ -12,16 +12,43 @@ body {
   @apply bg-zinc-900 text-zinc-50 h-[200vh]
 }
 
-/* utilities */
+/* ---------> Typography <--------- */
+
+.headline-1 {
+  @apply max-w-max;
+  background: -webkit-linear-gradient(0deg, #fafafa, #a1a1aa);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.headline-1 {
+  @apply text-5xl leading-tight font-semibold lg:text-[55px] lg:leading-[1.15]
+}
+
+/* ---------> Utilities <--------- */
 
 .material-symbols-rounded {
   @apply w-[1em] h-[1em] overflow-hidden;
   font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
 }
 
+.container {
+  @apply px-4 mx-auto lg:px-8 xl:max-w-6xl
+}
+
+.img-box {
+  @apply bg-zinc-700 overflow-hidden
+}
 
 
-/* Components */
+.img-cover {
+  @apply w-full h-full object-cover
+}
+
+.section {
+  @apply pt-20 lg:pt-32
+}
+/* ---------> Components <--------- */
 
 /* Menu btn */
 .menu-btn {
@@ -59,4 +86,21 @@ body {
 
 .btn-secondary {
   @apply bg-zinc-50 text-zinc-900 active:bg-zinc-50/80
+}
+
+.btn .material-symbols-rounded {
+  @apply text-[18px]
+}
+
+.btn:has( .material-symbols-rounded) {
+  @apply pr-3
+}
+
+.btn-primary {
+  /* @apply bg-zinc-900 text-zinc-50 active:bg-zinc-900/80 */
+  @apply h-11 bg-sky-400 text-zinc-950 hover:bg-sky-300 active:bg-sky-400
+}
+
+.btn-outline {
+  @apply h-11 bg-zinc-800 hover:bg-zinc-700 active:bg-zinc-800
 }
