--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,8 @@ body {
 
 /* ---------> Typography <--------- */
 
-.headline-1 {
+.headline-1,
+.headline-2 {
   @apply max-w-max;
   background: -webkit-linear-gradient(0deg, #fafafa, #a1a1aa);
   -webkit-background-clip: text;
@@ -25,6 +26,13 @@ body {
   @apply text-5xl leading-tight font-semibold lg:text-[55px] lg:leading-[1.15]
 }
 
+.headline-2 {
+  @apply text-3xl lg:text-4xl lg:leading-tight font-semibold
+}
+
+.title-1 {
+  @apply text-[22px] font-normal
+}
 /* ---------> Utilities <--------- */
 
 .material-symbols-rounded {
