--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,10 @@ body {
 .section {
   @apply pt-20 lg:pt-32
 }
+
+.reveal-up {
+  @apply translate-y-20 opacity-0
+}
 /* ---------> Components <--------- */
 
 /* Menu btn */
@@ -112,3 +116,18 @@ body {
 .btn-outline {
   @apply h-11 bg-zinc-800 hover:bg-zinc-700 active:bg-zinc-800
 }
+
+
+/* Text Field */
+
+.label {
+  @apply block text-zinc-200 text-sm font-normal mb-2
+}
+.text-field {
+  @apply block outline-none w-full px-3 py-3 text-sm bg-zinc-800 rounded-xl ring-1 ring-inset ring-transparent transition-shadow hover:ring-zinc-50/5 focus:ring-sky-400 focus:ring-2
+}
+
+.text-field::placeholder {
+  @apply text-zinc-400
+}
+
